objects/PC_Preferred_SP_By_Payer__c.object
<CustomObject>
    <description>This junction object holds preferred payers for a given PBM</description>
    <fields>
        <fullName>PC_PayerNameIfNoAccount__c</fullName>
        <description>Allow admin users to add payers/SPs that are not accounts in Patient Connect to the SP-Payer relationship table shown in the eBI/BV workflow</description>
        <label>Payer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Payer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payer/Reimbursement organization name</description>
        <label>Payer</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Payer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Preferred SP by Payer (Payer)</relationshipLabel>
        <relationshipName>Payer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_SpecialtyPharmacyNameIfNoAccount__c</fullName>
        <description>Allow admin users to add payers/SPs that are not accounts in Patient Connect to the SP-Payer relationship table shown in the eBI/BV workflow</description>
        <label>Specialty Pharmacy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Specialty_Pharmacy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pharmacy account name</description>
        <label>Specialty Pharmacy</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Preferred SP by Payer (Specialty Pharmacy)</relationshipLabel>
        <relationshipName>Specialty_Pharmacy</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Preferred Specialty Pharmacy by Payer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PSP-{0000}</displayFormat>
        <label>Preferred Specialty Pharmacy by Payer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferred Specialty Pharmacy by Payer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>